--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -12,24 +12,24 @@
                 <li class="breadcrumb-item active">New Book</li>
             </ul>
             <h1>New Book</h1>
-            <form action="#" th:action="@{/admin/newBook}" th:object="${book}" method="POST" enctype="multipart/form-data" class="needs-validation" novalidate>
+            <form class="needs-validation" novalidate th:action="@{/admin/newBook}" th:object="${book}" method="POST" enctype="multipart/form-data" action="#">
                 <!--<div class="ServerValidationError" th:if="${#fields.hasErrors()}">
                     <span>Please correct the problems below and resubmit.</span>
                 </div>-->
                 <div class="form-group">
                     <label for="isbn">ISBN:</label>
-                    <input type="text" th:field="*{isbn}" class="form-control" id="isbn" placeholder="enter isbn" name="isbn" required>
+                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required>
                     <div class="invalid-feedback">Please fill out this field.</div>
                     <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('isbn')}" th:errors="*{isbn}">Error</span>-->
                 </div>
                 <div class="form-group">
                     <label for="title">Title:</label>
-                    <input type="text" th:field="*{title}" class="form-control" id="title" placeholder="enter title" name="title" required>
+                    <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" required>
                     <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
                 <div class="form-group">
                     <label for="category">Category:</label>
-                    <select th:field="*{category.id}" class="custom-select" id="category" name="category">
+                    <select class="custom-select" th:field="*{category.id}" id="category">
                         <option th:each="ic : ${indentedCategories}"
                                 th:value="${ic.id}"
                                 th:text="${ic.name}">
