--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,6 +15,22 @@
             <form  action="#" th:action="@{/logout}" method="POST" id="logoutForm">
                 <input type="submit" value="Logout"/>
             </form>
+
+            <!--
+            <div class="row">
+                <div class="col-sm-3 my-2 d-flex align-content-stretch flex-wrap" th:each="mi : ${allMetaInfo}">
+                    <div class="card">
+                        <img class="card-img-top" th:src="@{/image/{id}(id=${mi.id})}">
+                        <div class="card-body">
+                            <h5 class="card-title" th:text="${mi.name}">Image name</h5>
+                            <p class="card-text" th:text="${mi.mimeType}">Image MIME type</p>
+                            <p class="card-text" th:text="${mi.default}">isDefault</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            -->
+
         </div>
         <footer th:replace="fragments::footer"></footer>
     </body>
