--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -17,39 +17,49 @@
 
     <body>
 
-        <header th:fragment="header">
-            <h1 class="bg-light text-center">HEADER</h1>
-            <!--<nav class="navbar navbar-expand-lg navbar-dark bg-light">
-                <a class="navbar-brand" href="#">
-                    <img th:src="@{fm.png}" width="30" height="30" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/productos/lista}">Productos</a>
-                        </li>
-                    </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Buscar..." aria-label="Search">
-                        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Buscar</button>
-                    </form>
-                </div>
-            </nav>-->
-        </header>
-
         <div class="container">
-        </div>
 
-        <footer th:fragment="footer" class="bg-light text-center fixed-bottom">
-            <span class="info-copyrigth"><a href="https://github.com/misrraimsp/firstmarket">firstmarket</a> © 2020</span>
-        </footer>
+            <div class="row" th:fragment="header">
+                <div class="col-lg-12">
+                    <header>
+                        <h1 class="bg-light text-center">HEADER</h1>
+                        <!--<nav class="navbar navbar-expand-lg navbar-dark bg-light">
+                            <a class="navbar-brand" href="#">
+                                <img th:src="@{fm.png}" width="30" height="30" alt="">
+                            </a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav mr-auto">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" th:href="@{/productos/lista}">Productos</a>
+                                    </li>
+                                </ul>
+                                <form class="form-inline my-2 my-lg-0">
+                                    <input class="form-control mr-sm-2" type="search" placeholder="Buscar..." aria-label="Search">
+                                    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Buscar</button>
+                                </form>
+                            </div>
+                        </nav>-->
+                    </header>
+                </div>
+            </div>
+
+
+            <div class="row" th:fragment="footer">
+                <div class="col-lg-12">
+                    <footer class="bg-light text-center">
+                        <span class="info-copyrigth"><a href="https://github.com/misrraimsp/firstmarket">firstmarket</a> © 2020</span>
+                    </footer>
+                </div>
+            </div>
+
+        </div>
 
         <!-- Enable all tooltips in the document -->
         <script th:fragment="enableTooltips">
