--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -5,33 +5,29 @@
     <head th:replace="fragments::head">
     </head>
     <body>
-    <header th:replace="fragments::header"></header>
-    <div class="container">
-        <h1>Categories Manager</h1>
-        <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a th:href="@{/admin}">Admin</a></li>
-            <li class="breadcrumb-item active">Categories Manager</li>
-        </ul>
-        <p><a class="btn btn-primary" th:href="@{/admin/newCategory}">new category</a></p>
-        <table class="table">
-            <thead class="thead-light">
-            <tr>
-                <th>Name</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="ic : ${indentedCategories}">
-                <td><span th:text="${ic.name}">name</span></td>
-                <td th:if="${ic.name!='firstmarket'}">
-                    <a th:href="@{/admin/editCategory/{id}(id=${ic.id})}" data-toggle="tooltip" title="Edit Category"><i class="fas fa-pen"></i></a>
-                    <a th:href="@{/admin/deleteCategory/{id}(id=${ic.id})}" data-toggle="tooltip" title="Delete Category"><i class='fas fa-trash-alt' style='color:red'></i></a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <footer th:replace="fragments::footer"></footer>
-    <script th:replace="fragments::enableTooltips"></script>
+        <header th:replace="fragments::header"></header>
+        <div class="container">
+            <div th:replace="fragments::underHead('Categories')"></div>
+            <div th:replace="fragments::addButton('newCategory')"></div>
+            <table class="table">
+                <thead class="thead-light">
+                <tr>
+                    <th>Name</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="ic : ${indentedCategories}">
+                    <td><span th:text="${ic.name}">name</span></td>
+                    <td th:if="${ic.name!='firstmarket'}">
+                        <a th:href="@{/admin/editCategory/{id}(id=${ic.id})}" data-toggle="tooltip" title="Edit Category"><i class="fas fa-pen"></i></a>
+                        <a th:href="@{/admin/deleteCategory/{id}(id=${ic.id})}" data-toggle="tooltip" title="Delete Category"><i class='fas fa-trash-alt' style='color:red'></i></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <footer th:replace="fragments::footer"></footer>
+        <script th:replace="fragments::enableTooltips"></script>
     </body>
 </html>
