--- a/src/main/resources/templates/newCategory.html
+++ b/src/main/resources/templates/newCategory.html
@@ -6,12 +6,12 @@
     <body>
         <header th:replace="fragments::header"></header>
         <div class="container">
-            <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a th:href="@{/admin}">Admin</a></li>
-                <li class="breadcrumb-item"><a th:href="@{/admin/categories}">Categories Manager</a></li>
+            <ul class="breadcrumb my-2">
+                <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
+                <li class="breadcrumb-item"><a th:href="@{/admin/categories}">Categories</a></li>
                 <li class="breadcrumb-item active">New Category</li>
             </ul>
-            <h1>New Category</h1>
+            <h3>New Category</h3>
             <form action="#" th:action="@{/admin/newCategory}" th:object="${category}" method="POST" class="needs-validation" novalidate>
                 <!--<div class="ServerValidationError" th:if="${#fields.hasErrors()}">
                     <span>Please correct the problems below and resubmit.</span>
@@ -30,7 +30,7 @@
                         </option>
                     </select>
                 </div>
-                <button type="submit" class="btn btn-primary">Save Category</button>
+                <button th:replace="fragments::saveButton"></button>
             </form>
         </div>
         <footer th:replace="fragments::footer"></footer>
