--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -7,11 +7,11 @@
         <header th:replace="fragments::header"></header>
         <div class="container">
             <ul class="breadcrumb my-2">
-                <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-                <li class="breadcrumb-item active">New User</li>
+                <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
+                <li class="breadcrumb-item active">Edit Profile</li>
             </ul>
-            <h3>New User</h3>
-            <form action="#" th:action="@{/newUser}" th:object="${user}" method="POST" class="needs-validation" novalidate>
+            <h3>Edit Profile</h3>
+            <form class="needs-validation" novalidate th:action="@{/user/editUser}" th:object="${user}" method="POST" action="#">
                 <!--<div class="ServerValidationError" th:if="${#fields.hasErrors()}">
                     <span>Please correct the problems below and resubmit.</span>
                 </div>-->
@@ -21,13 +21,6 @@
                     <div class="invalid-feedback">Please fill out this field.</div>
                     <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username Error</span>-->
                 </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" th:field="*{password}" class="form-control" id="password" placeholder="enter password" required>
-                    <div class="invalid-feedback">Please fill out this field.</div>
-                    <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</span>-->
-                </div>
-                <!-- TODO: confirm password functionality -->
                 <div class="form-group">
                     <label for="firstName">First Name:</label>
                     <input type="text" th:field="*{firstName}" class="form-control" id="firstName" placeholder="enter firstName" required>
