--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,11 +27,20 @@
                     <div class="row">
                         <div class="col-sm-3 my-2 d-flex align-content-stretch flex-wrap" th:each="book : ${books}">
                             <div class="card">
-                                <img class="card-img-top" th:src="@{/image/{id}(id=${book.image.id})}">
+                                <div class="card-header">
+                                    <img class="card-img-top" th:src="@{/image/{id}(id=${book.image.id})}" />
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title" th:text="${book.title}">title</h5>
                                     <p class="card-text">Category: <span th:text="${book.category.name}">category</span></p>
                                     <p class="card-text">ISBN: <span th:text="${book.isbn}">isbn</span></p>
+                                </div>
+                                <div class="card-footer">
+                                    <span th:text="${book.id}">id</span>
+                                    <form th:action="@{/user/addItem}" method="POST" action="#">
+                                        <input type="hidden" th:name="bookId" th:value="${book.id}"/>
+                                        <input class="btn btn-outline-dark btn-sm" type="submit" value="Add to Cart"/>
+                                    </form>
                                 </div>
                             </div>
                         </div>
