--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,8 @@
             <form class="needs-validation" novalidate th:action="@{/login}" method="POST" action="#">
                 <div class="form-group">
                     <label for="email">E-mail:</label>
-                    <input type="email" class="form-control" id="email" placeholder="enter email" name="username" required>
+                    <!--<input type="email" class="form-control" id="email" placeholder="enter email" name="username" required>-->
+                    <input type="text" class="form-control" id="email" placeholder="enter email" name="username" required>
                     <div class="invalid-feedback">Please fill out this field with your email.</div>
                 </div>
                 <div class="form-group">
